Preventing plotly controls from overlapping the header

--- a/ui/components/app/style.less
+++ b/ui/components/app/style.less
@@ -20,7 +20,7 @@ header.branding{
   right: 0;
   left: 0;
   height: 64px;
-  z-index: 1;
+  z-index: 1002;
 
   h1, small{
     color: white;
